Issue #50: Sorted the syllabi, upper-cased the program, wrapped lists
Sorted the array contained the syllabi so that the the lists makes
much more sense now.

Transformed the $program variable to uppercase in the list headings,
which looks much nicer, and actually seems like it's acceptable.

Wrapped the lists in a div so that they can be made to sit nicely
next to one another without one title overtaking the other and pushing
the entire second list down. Dumb lists.

--- a/sites/all/themes/slcc_subtheme/css/slcc.css
+++ b/sites/all/themes/slcc_subtheme/css/slcc.css
@@ -788,6 +788,11 @@ div#social-sharing-buttons {
 }
 
 /* Class Syllabi Listing */
+div.syllabi-list-container {
+  width: 50%;
+  float:left;
+}
+
 ul#traditional-syllabi-list li,
 ul#evening-syllabi-list li,
 ul#traditional-syllabi-list li a,
